完善优化了成绩查询功能的代码以及业务逻辑
 完善优化了成绩查询功能的代码以及业务逻辑。主要是完善了成绩分享功能，如果henbf的成绩单分享不出来，就用小程序原生的转发分享。本版本可以获取到用户的OpenID.最后稍微更新了下文档

--- a/pages/score/showScore/showScore.wxml
+++ b/pages/score/showScore/showScore.wxml
@@ -12,7 +12,7 @@
     </view>
   </view>
   <view class="score__hd" wx:if="{{jsonContent.data}}">
-    <button class="clear" bindtap='GetScoreList'>
+    <button class="clear" open-type='share'>
       <view class="weui-item border-shadow background-1">
         <view class="weui-flex">
           <view class="weui-flex__item">
