2.UI界面,未完成。。。明天继续

--- a/pages/bookSearch/index.wxml
+++ b/pages/bookSearch/index.wxml
@@ -1,10 +1,16 @@
-<view class="page">
-  <view class="page__bd" style='padding-bottom:0px;'>
-    <view class="weui-search-bar">
+<!--index.wxml-->
+<view class="container">
+  <!--图书检索-->
+  <view class="main-card-item" id="ykt">
+    <view class="card-item-hd">
+      <image class="card-item-icon" src="/images/jy.png"></image>
+      <text class="card-item-name">图书检索查询</text>
+    </view>
+    <view class="weui-search-bar" style='background-color:#fff;border-top:0rpx;'>
       <view class="weui-search-bar__form">
         <view class="weui-search-bar__box">
           <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
-          <input type="text" class="weui-search-bar__input" placeholder="输入您要检索的图书关键字" value="{{inputVal}}" focus="{{inputShowed}}" bindconfirm="searchIt" bindfocus="onBindFocus" confirm-type='search' />
+          <input type="text" class="weui-search-bar__input" placeholder="输入您要检索的图书关键字" value="{{inputVal}}" focus="{{inputShowed}}" bindconfirm="searchIt" bindfocus="onBindFocus" confirm-type='search' bindinput="inputTyping" />
         </view>
         <label class="weui-search-bar__label" hidden="{{inputShowed}}" bindtap="showInput">
           <icon class="weui-icon-search" type="search" size="14"></icon>
@@ -13,49 +19,198 @@
       </view>
       <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="onBindBlur">取消</view>
     </view>
-  </view>
-  <view class="describe" wx:if="{{searchPanelShow}}">
-    <view class="weui-cells__title">关键字检索类型</view>
-    <view class="weui-cells weui-cells_after-title">
-      <radio-group bindchange="radioChange">
-        <label class="weui-cell weui-check__label" wx:for="{{radioItems}}" wx:key="value">
-          <radio class="weui-check" value="{{item.value}}" checked="{{item.checked}}" />
-          <view class="weui-cell__bd">{{item.name}}</view>
-          <view class="weui-cell__ft weui-cell__ft_in-radio" wx:if="{{item.checked}}">
-            <icon class="weui-icon-radio" type="success_no_circle" size="16"></icon>
-          </view>
-        </label>
-      </radio-group>
-    </view>
-  </view>
-  <view wx:if="{{searchPanelShow==false}}">
-    <view class="marquee" wx:if="{{notices != ' '}}">
-      <view class="content">
-        <text>{{notices}}</text>
-        <text style="display: inline-block; width: 5em;"></text>
-        <text>{{notices}}</text>
-        <text style="display: inline-block; width: 5em;"></text>
-        <text>{{notices}}</text>
-        <text style="display: inline-block; width: 5em;"></text>
+    <view class="card-item-bd">
+      <view class="page-section page-section-gap radios">
+        <view class='blockView'>
+          <radio-group class="radio-group" bindchange="radioChange">
+            <label class="radio" wx:for="{{radioItems}}" wx:key="radios">
+              <radio value="{{item.value}}" checked="{{item.checked}}" />{{item.name}}
+            </label>
+          </radio-group>
+        </view>
+        <button class="mini-btn" type="primary" size="mini" bindtap='searchIt'>查找</button>
       </view>
     </view>
-    <view class="weui-panel__bd">
-      <block wx:for="{{jsonStr}}" wx:key="hotlist">
-        <navigator url="./bookInfo/bookInfo?ISBN={{item.isbn10}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-          <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-            <image class="bookImg" src="{{item.images.small}}" />
+  </view>
+
+  <view wx:if="{{isLoading == '加载中'}}" class="remind-box">
+    <image class="remind-img" src="/images/loading.gif"></image>
+  </view>
+  <!--卡片列表-->
+  <view wx:else class="main-card">
+
+    <!--下节要上课程-->
+    <view class="main-card-item" id="kb" wx-if='{{jsonStr.todayCourse.nextCourse !== null}}'>
+      <navigator url="/pages/core/kb/kb">
+        <view class="card-item-hd">
+          <image class="card-item-icon" src="/images/kb.png"></image>
+          <text class="card-item-name">下节课</text>
+        </view>
+        <view class="card-item-bd">
+          <view class="kb-item">
+            <view class="kb-item-left">
+              <text class="kb-item-what">{{jsonStr.todayCourse.nextCourse.courseName}}</text>
+              <text class="kb-item-when">{{jsonStr.todayCourse.nextCourse.startTime}} ~ {{jsStr.todayCourse.nextCourse.endTime}}上课</text>
+            </view>
+            <text class="kb-item-where">{{jsonStr.todayCourse.nextCourse.place}}</text>
           </view>
-          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-            <view class="weui-media-box__title">{{item.title}}</view>
-            <view class="weui-media-box__desc">豆瓣：{{item.rating.average}}分</view>
-            <view class="weui-media-box__desc">作者：{{item.author[0]}}</view>
-            <view class="weui-media-box__desc">{{item.publisher}}</view>
-          </view>
-        </navigator>
-      </block>
+        </view>
+      </navigator>
     </view>
-    <view wx:if="{{showTips}}">
-      <view class="logo-sub">想推荐好书上榜？欢迎发送意见留言</view>
+
+
+    <!--今日全天没课?-->
+    <view class="main-card-item" wx:if='{{jsonStr.todayCourse.getCourseStatus == 204}}'>
+      <view class="card-item-hd">
+        <image class="card-item-icon" src="/images/kb.png"></image>
+        <text class="card-item-name">今日（{{jsonStr['month']}}月{{jsonStr['day']}}日 {{jsonStr['dayOfWeek']}}）课表</text>
+      </view>
+      <view class="card-item-bd">
+        <view class="book-intro raduis">
+          <view class="remind-box">
+            <image class="remind-img" src="/images/holiday.png"></image>
+            <text class="remind-text">{{jsonStr.todayCourse.message}}</text>
+          </view>
+        </view>
+      </view>
+    </view>
+
+    <!--今日全天课表-->
+    <view wx:else class="main-card-item" id="kb">
+      <navigator url="/pages/core/kb/kb">
+        <view class="card-item-hd">
+          <image class="card-item-icon" src="/images/kb.png"></image>
+          <text class="card-item-name">（{{jsonStr['month']}}月{{jsonStr['day']}}日 {{jsonStr['dayOfWeek']}}）课表</text>
+        </view>
+        <view class="card-item-bd">
+          <view class="kb-item" wx:for="{{jsonStr['todayCourse']['allCourse']}}" wx:key="todayCourse">
+            <view class="kb-item-left">
+              <text class="kb-item-what">{{item.courseName}}</text>
+              <text class="kb-item-when">{{item.startTime}} - {{item.endTime}}上课</text>
+            </view>
+            <text class="kb-item-where">{{item.place}}</text>
+          </view>
+        </view>
+        <view class="kb-open">
+          <text>查看完整个人课表</text>
+        </view>
+      </navigator>
+    </view>
+
+
+
+
+
+
+
+
+    <!--一卡通-->
+    <!-- <view class="main-card-item" id="ykt">
+      <navigator url="/pages/core/ykt/ykt">
+        <view class="card-item-hd">
+          <image class="card-item-icon" src="/images/kb.png"></image>
+          <text class="card-item-name">一卡通</text>
+        </view>
+        <view class="card-item-bd">
+          <view class="card-info-hd">
+            <view class="card-info-left">
+              <text class="ykt-title">余额：</text>
+            </view>
+            <view class="card-info-right">
+              <view>截至时间：2019年2月1日 13:22</view>
+            </view>
+          </view>
+          <view class="ykt-balance">
+            <text class="ykt-balance-value">20.19</text>
+            <text class="ykt-balance-text">元</text>
+          </view>
+          <text class="ykt-title">今日消费：</text>
+          <view class="ykt-cost">
+            <text class="ykt-cost-value">吃饭</text>
+            <text class="ykt-cost-text">=</text>
+            <text class="ykt-cost-total">12.00</text>
+            <text class="ykt-cost-text">元</text>
+          </view>
+        </view>
+      </navigator>
+    </view> -->
+
+    <!--节假日信息      wx-if="{{item.gapDays <= 30 }}"-->
+    <view class="main-card-item" id="fj" wx:for='{{jsonStr["nextHoliday"]}}' wx:key="jiejiari">
+      <view class="card-item-hd">
+        <image class="card-item-icon" src="/images/holiday.png"></image>
+        <text class="card-item-name">放假信息</text>
+      </view>
+      <view class="card-item-bd">
+        <view class="jy-list">
+          <view class="jy-item">
+            <view class="jy-return-time">
+              <text class="jy-return-time-value">今天距 {{item.holidayName}}</text>
+            </view>
+            <view class="jy-timing">
+              <text class="jy-timing-text">还有</text>
+              <text class="ykt-balance-value">{{item.gapDays}}</text>
+              <text class="jy-timing-text">天</text>
+            </view>
+          </view>
+        </view>
+      </view>
+    </view>
+
+    <!--距考试周倒计时  wx-if="{{jsonStr.gap2ExamWeek <= 30 }}"-->
+    <view class="main-card-item" id="ks">
+      <view class="card-item-hd">
+        <image class="card-item-icon" src="/images/ks.png"></image>
+        <text class="card-item-name">集中考试周</text>
+      </view>
+      <view class="card-item-bd">
+        <view class="jy-list">
+          <view class="jy-item">
+            <view class="jy-return-time">
+              <text class="jy-return-time-value">今天距集中考试周 </text>
+            </view>
+            <view class="jy-timing">
+              <text class="jy-timing-text">仅剩</text>
+              <text class="ykt-balance-value">{{jsonStr.gap2ExamWeek}}</text>
+              <text class="jy-timing-text">天</text>
+            </view>
+          </view>
+        </view>
+      </view>
+    </view>
+
+    <!--电费-->
+    <view class="main-card-item" id="sdf">
+      <navigator url="/pages/core/sdf/sdf">
+        <view class="card-item-hd">
+          <image class="card-item-icon" src="/images/sdf.png"></image>
+          <text class="card-item-name">电费查询</text>
+        </view>
+        <view class="card-item-bd">
+          <view class="card-info-hd">
+            <view class="card-info-left">
+              <text class="card-info-name">22斋303</text>
+            </view>
+            <view class="card-info-right">
+              <view>截至时间：2019年2月1日 22点31分</view>
+            </view>
+          </view>
+          <text class="sdf-hd">当月用电：</text>
+          <view class="sdf-bd">
+            <view class="sdf-key">
+              <text class="sdf-value">15</text>
+              <text class="sdf-text">度</text>
+            </view>
+            <view class="sdf-key">
+              <text class="sdf-text">剩余</text>
+              <text class="sdf-value">13.00</text>
+              <text class="sdf-text">元</text>
+            </view>
+          </view>
+        </view>
+      </navigator>
     </view>
   </view>
+
+
 </view>
