--- a/pages/features/features.wxml
+++ b/pages/features/features.wxml
@@ -1,12 +1,24 @@
 <!--pages/features/features.wxml-->
-<swiper class="swiper" indicator-dots="true" autoplay="true" interval="5000" duration="1000">
-  <block wx:for="{{swiperPic}}" wx:key="index">
-    <swiper-item>
-      <image src="{{item.url}}" class="slide-image" mode="aspectFill" />
-    </swiper-item>
-  </block>
-</swiper>
 <view class="page">
+  <view class='GreenBG'>
+    <view class="weui-panel weui-panel_access GreenBG">
+      <view class="weui-panel__bd GreenBG">
+        <view class="weui-media-box weui-media-box_appmsg GreenBG">
+          <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+            <view class="weui-media-box__thumb">
+              <open-data type="userAvatarUrl"></open-data>
+            </view>
+          </view>
+          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+            <view class="weui-media-box__title">
+              <open-data type="userNickName"></open-data>
+            </view>
+            <view class="weui-media-box__title">{{uid}}</view>
+          </view>
+        </view>
+      </view>
+    </view>
+  </view>
   <view class="page__bd">
     <view class="weui-grids">
       <block wx:for="{{grids}}" wx:key="*this">
