--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -5,7 +5,20 @@
   height: 100%;
   overflow: hidden;
 }
-.content{
+
+.login-btn {
+  font-size: 13pt;
+  line-height: 85rpx;
+  height: 85rpx;
+  background: #7acfa6;
+  color: #fff;
+  text-align: center;
+  border-radius: 25px;
+  box-shadow: 5rpx 5rpx 15rpx #ccc;
+  margin: 30rpx 30rpx 30rpx;
+}
+
+.content {
   flex: 1;
   display: flex;
   position: relative;
@@ -16,17 +29,29 @@
   width: 100%;
   height: 100%;
   padding-bottom: 450rpx;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(244,244,244,0)), color-stop(0.1, #f4f4f4), to(#f4f4f4));
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(244, 244, 244, 0)), color-stop(0.1, #f4f4f4), to(#f4f4f4));
   opacity: 0;
-  transform: translate3d(0,100%,0);
-  animation: rise 3s cubic-bezier(0.19, 1, 0.22, 1) .25s forwards;
+  transform: translate3d(0, 100%, 0);
+  animation: rise 3s cubic-bezier(0.19, 1, 0.22, 1) 0.25s forwards;
 }
-@keyframes rise{
-  0% {opacity: 0;transform: translate3d(0,100%,0);}
-  50% {opacity: 1;}
-  100% {opacity: 1;transform: translate3d(0,450rpx,0);}
+
+@keyframes rise {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate3d(0, 450rpx, 0);
+  }
 }
-.title{
+
+.title {
   position: absolute;
   top: 30rpx;
   left: 50%;
@@ -34,11 +59,17 @@
   height: 200rpx;
   margin-left: -300rpx;
   opacity: 0;
-  animation: show 2.5s cubic-bezier(0.19, 1, 0.22, 1) .5s forwards;
+  animation: show 2.5s cubic-bezier(0.19, 1, 0.22, 1) 0.5s forwards;
 }
-@keyframes show{
-  0% {opacity: 0;}
-  100% {opacity: .95;}
+
+@keyframes show {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0.95;
+  }
 }
 
 .hd {
@@ -48,8 +79,9 @@
   width: 1000rpx;
   margin-left: -500rpx;
   height: 200rpx;
-  transition: all .35s ease;
+  transition: all 0.35s ease;
 }
+
 .logo {
   position: absolute;
   z-index: 2;
@@ -60,17 +92,39 @@
   margin-left: -80rpx;
   border-radius: 160rpx;
   animation: sway 10s ease-in-out infinite;
-  opacity: .95;
+  opacity: 0.95;
 }
-@keyframes sway{
-  0% {transform: translate3d(0,20rpx,0) rotate(-15deg); }
-  17% {transform: translate3d(0,0rpx,0) rotate(25deg); }
-  34% {transform: translate3d(0,-20rpx,0) rotate(-20deg); }
-  50% {transform: translate3d(0,-10rpx,0) rotate(15deg); }
-  67% {transform: translate3d(0,10rpx,0) rotate(-25deg); }
-  84% {transform: translate3d(0,15rpx,0) rotate(15deg); }
-  100% {transform: translate3d(0,20rpx,0) rotate(-15deg); }
+
+@keyframes sway {
+  0% {
+    transform: translate3d(0, 20rpx, 0) rotate(-15deg);
+  }
+
+  17% {
+    transform: translate3d(0, 0rpx, 0) rotate(25deg);
+  }
+
+  34% {
+    transform: translate3d(0, -20rpx, 0) rotate(-20deg);
+  }
+
+  50% {
+    transform: translate3d(0, -10rpx, 0) rotate(15deg);
+  }
+
+  67% {
+    transform: translate3d(0, 10rpx, 0) rotate(-25deg);
+  }
+
+  84% {
+    transform: translate3d(0, 15rpx, 0) rotate(15deg);
+  }
+
+  100% {
+    transform: translate3d(0, 20rpx, 0) rotate(-15deg);
+  }
 }
+
 .wave {
   position: absolute;
   z-index: 3;
@@ -81,17 +135,30 @@
   width: 2250rpx;
   animation: wave 10s linear infinite;
 }
+
 .wave-bg {
   z-index: 1;
   animation: wave-bg 10.25s linear infinite;
 }
-@keyframes wave{
-  from {transform: translate3d(125rpx,0,0);}
-  to {transform: translate3d(1125rpx,0,0);}
+
+@keyframes wave {
+  from {
+    transform: translate3d(125rpx, 0, 0);
+  }
+
+  to {
+    transform: translate3d(1125rpx, 0, 0);
+  }
 }
-@keyframes wave-bg{
-  from {transform: translate3d(375rpx,0,0);}
-  to {transform: translate3d(1375rpx,0,0);}
+
+@keyframes wave-bg {
+  from {
+    transform: translate3d(375rpx, 0, 0);
+  }
+
+  to {
+    transform: translate3d(1375rpx, 0, 0);
+  }
 }
 
 .bd {
@@ -100,13 +167,22 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  animation: bd-rise 2s cubic-bezier(0.23,1,0.32,1) .75s forwards;
+  animation: bd-rise 2s cubic-bezier(0.23, 1, 0.32, 1) 0.75s forwards;
   opacity: 0;
 }
-@keyframes bd-rise{
-  from {opacity: 0; transform: translate3d(0,60rpx,0); }
-  to {opacity: 1; transform: translate3d(0,0,0); }
+
+@keyframes bd-rise {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 60rpx, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
+
 form {
   flex: 1;
   display: flex;
@@ -114,6 +190,7 @@ form {
   align-items: stretch;
   justify-content: center;
 }
+
 .input-group {
   display: flex;
   align-items: center;
@@ -122,21 +199,23 @@ form {
   background: #fff;
   border-radius: 5px;
   border: 2px solid #f4f4f4;
-  transition: all .25s ease-in-out;
+  transition: all 0.25s ease-in-out;
 }
+
 .input-group.active {
   border: 2px solid #7acfa6;
 }
+
 .input-label {
   color: #888;
   font-size: 13pt;
   height: 25rpx;
   line-height: 25rpx;
   padding: 0 25rpx;
-  border-right: 1px solid #d8d8d8; 
+  border-right: 1px solid #d8d8d8;
 }
-.input-group input,
-.input-group picker {
+
+.input-group input, .input-group picker {
   flex: 1;
   font-size: 13pt;
   min-height: 52rpx;
@@ -144,10 +223,11 @@ form {
   line-height: 52rpx;
   padding: 0 25rpx;
 }
-.input-placeholder,
-.input-group picker.placeholder {
+
+.input-placeholder, .input-group picker.placeholder {
   color: #ccc;
 }
+
 .login-help {
   display: flex;
   align-items: center;
@@ -156,11 +236,13 @@ form {
   font-size: 10pt;
   color: #bbb;
 }
+
 .login-help-img {
   width: 11pt;
   height: 11pt;
   margin: 0 5rpx;
 }
+
 .confirm-btn {
   font-size: 13pt;
   line-height: 85rpx;
@@ -171,9 +253,11 @@ form {
   border-radius: 5px;
   margin: 50rpx 3%;
 }
+
 .confirm-btn:active {
-  opacity: .8;
+  opacity: 0.8;
 }
+
 .help {
   position: absolute;
   z-index: 100;
@@ -185,6 +269,7 @@ form {
   align-items: center;
   justify-content: center;
 }
+
 .box {
   position: relative;
   display: flex;
@@ -193,9 +278,10 @@ form {
   width: 80%;
   background: #fff;
   border-radius: 10px;
-  box-shadow: 0 0 50px rgba(22,22,22,.35);
-  transform: translate3d(0,-400rpx,0);
+  box-shadow: 0 0 50px rgba(22, 22, 22, 0.35);
+  transform: translate3d(0, -400rpx, 0);
 }
+
 .box-hd {
   display: flex;
   align-items: center;
@@ -203,9 +289,11 @@ form {
   height: 100rpx;
   border-bottom: 1px solid #eee;
 }
+
 .box-title {
   font-size: 13pt;
 }
+
 .box-close {
   position: absolute;
   right: 20rpx;
@@ -213,29 +301,35 @@ form {
   height: 35rpx;
   padding: 15rpx;
 }
+
 .box-bd {
   flex: 1;
   display: flex;
   flex-direction: column;
   padding: 15rpx 40rpx 30rpx;
 }
+
 .help-q {
   color: #999;
   font-size: 11pt;
   line-height: 200%;
   margin-top: 5rpx;
 }
+
 .help-a {
   text-indent: 1em;
   line-height: 160%;
   display: flex;
   flex-direction: column;
 }
-.help-a text{
+
+.help-a text {
   word-break: break-all;
 }
+
 /**登录动画**/
-.login_video{
+
+.login_video {
   position: absolute;
   z-index: 1;
   top: 50%;
@@ -245,9 +339,11 @@ form {
   height: 1334rpx;
   margin-top: -667rpx;
 }
-.video_hidden{
+
+.video_hidden {
   visibility: hidden;
 }
-page .wx-video-bar{
+
+page .wx-video-bar {
   display: none;
 }
